ocaml (3.09.0-0.experimental.2) experimental; urgency=low

  * Cleanup debian/control: remove redundant Depends.
  * Update location of ocaml-md5sums stuff.
  * Build-Depend on chrpath and delete rpath from DLLs.

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Mon, 31 Oct 2005 17:22:03 +0100

ocaml (3.09.0-0.experimental.1) experimental; urgency=low

  Changes by Sven Luther:
  * Updated to new upstream release.

 -- Sven Luther <luther@debian.org>  Thu, 27 Oct 2005 19:03:17 +0000

ocaml (3.08.3-9) unstable; urgency=low

  Changes by Samuel Mimram:
  * debian/patches/map_fold_order.dpatch: added a patch to make Map.fold order
    conform to the specification (Closes: #327211)

 -- Samuel Mimram <smimram@debian.org>  Thu,  8 Sep 2005 20:45:08 +0200

ocaml (3.08.3-8) unstable; urgency=low

  Changes by Jérôme Marant:
  * Create a new `ocaml-mode' package dedicated at Emacs-related files
    (Closes: Bug#312618, Bug#322210)
  * debian/control:
    - Add new ocaml-mode package section
    - [ocaml-nox]
      + Remove emacsen-common dependency
      + Suggests tuareg-mode or ocaml-mode
  * debian/ocaml-mode.dirs: New file
  * debian/ocaml-nox.dirs: Remove emacsen-related files entries
  * debian/ocaml-mode.emacsen-install,
    debian/ocaml-mode.emacsen-remove,
    debian/ocaml-mode.emacsen-startup: New files respectively renamed from
    emacsen-install, emacsen-remove and emacsen-startup
  * debian/ocaml-nox.postint: Rename previous existing emacs site
    conffiles to <file>.save in order to avoid messing with the new
    ocaml-mode 
  * debian/rules: Install ocaml-mode files in their own location
  * debian/ocaml-base-nox.README.Debian: Mention new ocaml-mode package
  * debian/ocaml-nox.NEWS:
    - New file
    - Mention all emacs-related files moved to a separate ocaml-mode
      package
    - Mention that all previous emacs conffiles are renamed in order
      not to mess with the new ocaml-mode
  * debian/ocaml-mode.README.Debian:
    - New file