@@ -1,1 +1,2 @@
 usr/lib/ocaml/3.09.0/compiler-libs
+usr/share/lintian/overrides
