@@ -1,0 +1,1 @@
+copyright-should-refer-to-common-license-file-for-gpl
